# TransitionSolver

./: .flake8  .gitignore  AnalysablePotential.py  BarebonesExample.py  CITATIONS.bib  IntegrationHelper.py  PeterComments.txt  PhaseHistoryAnalysis.py  PhaseStructure.py  PipelineExample.py  PostPlots.py  README.md  SingletBarebonesExample.py  SingletModel.py  SingletPipelineExample.py  ToyModel.py  TransitionAnalysis.py  UserChanges.txt  debian_installer_phasetracer.bash  fedora_installer_phasetracer.bash  gwcal.py  jsonview.py  pyproject.toml  requirements.txt  scan.py  singlet.py
.github/workflows/: python-app.yml
ToCite/: citeifuse.bib  citeifuse.tex
analysis/: PhaseHistoryAnalysis.py  PhaseStructure.py  TransitionAnalysis.py  TransitionGraph.py  geff.py  phase_history_analysis.py  phase_structure.py  transition_analysis.py  transition_graph.py
debug/: PostPlots.py  post_plots.py
examples/: Archil_test.py  BarebonesExample.py  CommandLineInterface.py  PipelineExample.py  SingletBarebonesExample.py  SingletPipelineExample.py  barebones_example.py  command_line_interface.py  dof_test.py  generate_nanograv_plots.py  mygwcal.py  mygwcal1.py  mygwcal2.py  pipeline_example.py  pipeline_scan.py  pta_data.py  remake_nanograv_plots.py  remake_nanograv_spectrum.py  scan_nanograv.py
gws/: Hydrodynamics.py  PostAnalysisGWs.py  PostAnalysisGWs1.py  PostAnalysisGWs2.py  __init__.py  analyser.py  giese_kappa.py  gw_analyser.py  hydrodynamics.py  numdiff.py
gws/detectors/: GWDetector.py  LISA sensitivity spectrum 2019 PLS (lisa_plot) SNR=1.txt  LISA sensitivity spectrum 2019.txt  LISA.py  detector.py  lisa.py  pta.py
input/BminusL/: BLBP3.pt.json  BLBP3.txt  BmLTestPoint.pt.json  test.pt.json  test.txt
input/RSS/: RSS_BP2.txt  RSS_BP3.txt  RSS_BP4.txt  RSS_BP5.txt  RSS_BP6.txt  RSS_BP7.txt  RSS_BP8.txt  RSS_BP8_backup.txt  RSS_new_BP1.txt  RSS_new_BP2.txt  RSS_new_BP3.txt  RSS_new_BP4.txt  RSS_new_BP5.txt
input/RSS_HT/: RSS_HT_BP1.txt
input/Toy/: Toy_BP1.txt  Toy_BP2.txt  Toy_BP3.txt  Toy_BP4.txt  Toy_BP5.txt
input/archil/: archil_BP1.txt  archil_BP4.txt  archil_BP5.txt  archil_BP6.txt
input/nanograv/: nanograv_BP1.txt  nanograv_BP2.txt  nanograv_BP3.txt  nanograv_BP4.txt
input/nanograv (no Boltz)/: nanograv_BP3.txt
input/smpluscubic/: smpluscubic_BP2.txt  smpluscubic_BP3.txt  smpluscubic_BP7.txt
models/: AnalysablePotential.py  Archil_model.py  RealScalarSingletModel.py  RealScalarSingletModel_HT.py  SingletModel.py  ToyModel.py  analysable_potential.py  real_scalar_singlet_model.py  real_scalar_singlet_model_boltz.py  real_scalar_singlet_model_ht.py  supercool_model.py  toy_model.py
models/util/: RSS_BP.py  SM_geff.csv  fermion_geff.csv  geff_handler.py
src/: CMakeLists.txt
src/TransitionSolver/: RSS_BP.hpp  __init__.py  action.py  benchmarks.py  cli.py  cosmotransitions_compat.py  cppyy_compat.py  effective_potential.py  eigen.py  gws  integration.py  interface.cpp  phasehistory.py  phasetracer.py  phasetracer_cppyy.py  phasetracer_extensions.py  phasetracer_subprocess.py  plot.py  potential_tst.py  pt.py  pt_settings.hpp  report.py  test_potentials.py
src/TransitionSolver/analysis/: geff.py  integration.py  phase_history_analysis.py  phase_structure.py  transition_analysis.py  transition_graph.py
src/TransitionSolver/benchmarks/: __init__.py
src/TransitionSolver/data/: boson_geff.csv  logOmegah2_PPTADR3_0708.csv
src/TransitionSolver/debug/: post_plots.py
src/TransitionSolver/experimental/: phasetracer_cppyy.py
src/TransitionSolver/geff/: __init__.py
src/TransitionSolver/gws/: __init__.py  analyser.py  giese_kappa.py  giese_kappa_analytic.py  hydrodynamics.py
src/TransitionSolver/gws/detectors/: LISA_sensitivity_spectrum.txt  LISA_sensitivity_spectrum_1_yr.txt  LISA_sensitivity_spectrum_2019_SNR_10.txt  detector.py  lisa.py  logOmegah2_EPTADR2FULL_0708.csv  logOmegah2_NANO15_0708.csv  pta.py
src/TransitionSolver/models/: BminusL.py  analysable_potential.py  real_scalar_singlet_model.py  real_scalar_singlet_model_boltz.py  real_scalar_singlet_model_ht.py  supercool_model.py  toy_model.py
src/TransitionSolver/pt_settings/: BminusL.json  RSS_BP.json
src/TransitionSolver/settings/: gw_template_choices.json
src/TransitionSolver/util/: CosmoTransitions.patch  events.py
tests/: conftest.py  dictcmp.py  rss_bp1.txt  rss_bp1_dof.json  rss_bp1_gw.json  rss_bp1_phase_structure.json  test_action.py  test_action_import.py  test_cli_import.py  test_cosmo.py  test_cosmotransitions_compat.py  test_cppyy_compat.py  test_dof.py  test_gws.py  test_kappa_nu.py  test_package_import.py  test_phase.py  test_phase_history.py  test_phase_structure.py  test_phasetracer.py  test_phasetracer_platform.py  test_plots.py  test_potential.py
tests/RSS_BP4_23_12_2025/: phase_history.json
util/: Install_PhaseTracer  PrintSuppressor.py  events.py  integration.py
(+45 files in other folders)
