[build-system]
requires = ["scikit-build-core", "cmake", "ninja", "setuptools", "wheel"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.source-dir = "src"

[project]
name = "TransitionSolver"
version = "0.0.0"
dependencies = [
  "matplotlib",
  "scipy",
  "numpy",
  "cosmoTransitions",
  "click",
  "rich",
  "cppyy"
]
requires-python = ">=3.9"
# Note I suggest we make this match the list of authors on the manual
authors = [
  {name = "Lachlan Morris"},
  {name = "Peter Athron"},
  {name = "Csaba Balazs"},
  {name = "Andrew Fowlie"},
]
# we can keep this updated with lits of actuve developers
maintainers = [
  {name = "Peter Athron", email = "peter.athron@njnu.edu.cn"},
  {name = "Andrew Fowlie", email = "andrew.fowlie@xjtlu.edu.cn"},
]
description = "State of the art calculations for phase transitions and gravitational waves"
readme = "README.md"
license = "GPL-3.0"
license-files = ["LICENSE"]
keywords = ["physics", "phase transitions", "gravitational waves"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-mpl",
  "deepdiff"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Repository = "https://github.com/TransitionSolver/TransitionSolver"
"Bug Tracker" = "https://github.com/TransitionSolver/TransitionSolver/issues"

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = ["examples"]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--mpl"

[tool.setuptools.package-data]
"TransitionSolver" = ["geff/*.csv", "gws/detectors/*.txt", "gws/detectors/*.csv", "interface.cpp", "RSS_BP.hpp", "models/util/*.csv"]

[project.scripts]
ts = "TransitionSolver.cli:cli"
